# Mocap-Sample

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
asset/예/: 1783152726467.npy
doc/: AGENT.md  TODO.md  design.md  ml-flow.md  physical-ai-notes.md
models/: sign_classifier.pt
src/capture/: extractor.py  landmark_viewer.py
src/dataset/: collect.py  import_jester.py
src/inference/: predict.py  publisher.py
src/training/: augment.py  stress_test.py  train.py
